--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "32dc3ef0-49e1-4ba2-a275-eaa902dcb651",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
     "print(\"\\n🤖 KNN predicted clusters for first 5 entries:\")\n",
     "print(predicted_clusters)\n",
     "\n",
-    "# Save clustered data to CSV and JSON\n",
+    "# Save clustered data to CSV\n",
     "df.to_csv(\"../data/properties_clustered.csv\", index=False)\n",
     "\n",
     "print(\"💾 Clustered data saved to:\")\n",
@@ -134,13 +134,47 @@
     "print(\" - ../data/properties_clustered.json\")\n",
     "#test\n",
     "columns_to_save = [\"id\", text_column, \"cluster\"] + list(numeric_columns)\n",
-    "df[columns_to_save].to_csv(\"../data/properties_clustered_simple.csv\", index=False)"
+    "df[columns_to_save].to_csv(\"../data/properties_clustered_simple.csv\", index=False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#TODO: remove the above code and use the below code to train the model\n",
+    "#import json\n",
+    "#from pathlib import Path\n",
+    "#import sys\n",
+    "\n",
+    "## Add the api directory to Python path\n",
+    "#sys.path.append(str(Path.cwd().parent))\n",
+    "#\n",
+    "#from api.services.training_service import train_models\n",
+    "#\n",
+    "## Load properties from JSON file\n",
+    "#with open(\"../data/properties.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "#    properties = json.load(f)\n",
+    "#\n",
+    "## Train models\n",
+    "#stats, df = train_models(properties)\n",
+    "#\n",
+    "#print(\"✅ Model training complete using properties.json.\")\n",
+    "#\n",
+    "#print(\"🔍 Preview of clustered properties (with assigned cluster labels):\")\n",
+    "#print(df[[\"id\", \"description\", \"cluster\"]].head(10).to_string(index=False))\n",
+    "#\n",
+    "#print(\"\\n📊 Cluster distribution (how many properties in each cluster):\")\n",
+    "#print(df[\"cluster\"].value_counts().sort_index())\n",
+    "#\n",
+    "#print(\"\\n🤖 KNN predicted clusters for first 5 entries:\")\n",
+    "#print(stats[\"sample_predictions\"])\n",
+    "#\n",
+    "#print(\"\\n💾 Clustered data saved to:\")\n",
+    "#print(\" - ../data/properties_clustered.json\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0950132f",
+   "id": "bd3df2d0",
    "metadata": {},
    "outputs": [],
    "source": []
